# wifiphisher

./: .pre-commit-config.yaml  .travis.yml  CHANGELOG  CHANGELOG_FIXES.md  INDEX.md  QUICKSTART.md  README.md  README_ARCHIVE.md  RESUME_MODIFICATIONS.md  TACHES_TERMINEES.md  TROUBLESHOOTING.md  VERSION_2.0_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_fixes.py  wifiphisher_recovery.sh
.github/workflows/: ci.yml
tests/: test_deauth.py  test_extensions.py  test_interfaces.py  test_lure10.py  test_victims.py
wifiphisher/: pywifiphisher.py
wifiphisher/common/: accesspoint.py  extensions.py  firewall.py  interfaces.py  macmatcher.py  opmode.py  phishinghttp.py  phishingpage.py  recon.py  tui.py  utilities.py  victim.py
wifiphisher/data/: wifiphisher-mac-prefixes  wifiphisher-os-initial-requests
wifiphisher/data/phishing-pages/firmware-upgrade/html/: index.html  upgrading.html
wifiphisher/data/phishing-pages/oauth-login/html/: index.html  login.html
wifiphisher/data/phishing-pages/plugin_update/html/: index.html
wifiphisher/extensions/: deauth.py  handshakeverify.py  knownbeacons.py  lure10.py  roguehostapdinfo.py  wpspbc.py
